ft: style the sign in button and sign-in and sign-up pages

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+}
+
+.cl-cardBox {
+  border-radius: 5px !important;
+}
