--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,3 +14,14 @@ body {
 .cl-cardBox {
   border-radius: 5px !important;
 }
+
+::-webkit-scrollbar {
+  width: 5px;
+}
+::-webkit-scrollbar-track {
+  background-color: #e2e2e2;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: #888;
+}
